 * updated module pages to be after the relay pages
 * minor bug fixes
 
0.8.0
 * created ContentProvider for external apps to access the stored parameters
 * added automatic updating of status
 ** enabled by default, 15 minute intervals
 * added logging capabilities
 ** disabled by default, can email log to developer
 ** log file stored on sdcard, must have to work
 ** log file location /sdcard/data/info.curtbinder.reefangel.phone/
 * added system notifications if an error occurs while communicating
 ** enabled by default, uses default system notification sound
 ** notifications can be disabled and sound updated
 * modules displayed updates based on controller settings
 ** enabled by default
 * all new settings are under Settings -> Settings
 * service starts at device boot / start
 * service not started if app not configured
 * app won't try to update if network is down, will resume when network connection returns 
 * updated preference descriptions
 * dropped support for devices below Android 2.0
 * lots of code updates and reorganization

0.8.1
 * updated the settings page to make it simpler and fewer screens
 * updated for ics and jellybean
 * updated to new logo
 * error retry count to retry connection before displaying error
 ** disabled by default
 ** default 5 second interval between retries
 * switched changelog to html view
 
0.8.2
 * added ability to disable specific relays to prevent accidental toggling from the app (from triggerNZ)
 ** default all relays are enabled
 * ability to reset disabled ports to defaults
 * added vortech popup menu, long press on the value to prompt for immediate value change
 * moved date and time tab from memory to commands page
 * code updates

0.9.0
 * added actionbar support
 * added indicators to pages
 * added commands page to swipe left from the status page
 * improved / updated all page layouts to be more consistent
 * fixed crash with downloading labels
 * code updates and cleanup
 * added new icons
 