@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-Copyright (c) 2011-12 by Curt Binder (http://curtbinder.info)
+Copyright (c) 2011-2013 by Curt Binder (http://curtbinder.info)
  
 This work is made available under the terms of the 
 Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License
@@ -33,26 +33,48 @@ http://creativecommons.org/licenses/by-nc-sa/3.0/
 
             <Button
                 android:id="@+id/command_button_feed"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="@string/buttonFeeding" />
 
             <Button
                 android:id="@+id/command_button_water"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="@string/buttonWater" />
 
             <Button
                 android:id="@+id/command_button_exit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="@string/buttonExit" />
         </TableRow>
 
+         <TableRow
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="5dp" >
+
+            <Button
+                android:id="@+id/command_button_lights_on"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/labelLightsOn" />
+
+            <Button
+                android:id="@+id/command_button_lights_off"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/labelLightsOff" />
+
+        </TableRow>
+        
         <TableRow
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -61,14 +83,14 @@ http://creativecommons.org/licenses/by-nc-sa/3.0/
 
             <Button
                 android:id="@+id/command_button_ato_clear"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/buttonAtoClear" />
 
             <Button
                 android:id="@+id/command_button_overheat_clear"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/buttonOverheatClear" />
