@@ -4,7 +4,8 @@ Copyright (c) 2011-13 by Curt Binder (http://curtbinder.info)
  
 This work is made available under the terms of the
 Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License
-http://creativecommons.org/licenses/by-nc-sa/3.0/-->
+http://creativecommons.org/licenses/by-nc-sa/3.0/
+-->
 
 <resources>
 
@@ -148,6 +149,8 @@ Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License</stri
     <string name="labelCustom">Custom</string>
     <string name="labelEnable">Enable</string>
     <string name="labelChannel">Channel</string>
+    <string name="labelLightsOn">Lights On</string>
+    <string name="labelLightsOff">Lights Off</string>
     <string name="websiteReefangel">http://www.reefangel.com/</string>
     <string name="forumReefangel">http://forum.reefangel.com/</string>
     <string name="defaultStatusText">-</string>
